
5.2a1 -> 5.2a2:
    - jbj: generate Obsoletename index.
    - jbj: use rpmdsMatch to detect rpmdb trigger firing.
    - jbj: add rpmdsMatch to match dependency against set.
    - jbj: refactor the sumNN wrappers out of digest.c too.
    - jbj: include crc routines in a standalone file.
    - jbj: fix: unmatched file/dir path triggers were firing.
    - jbj: fire file trigger patterns symmetrically.
    - jbj: fire trigger patterns against filepaths. still asymmetric, todo++.
    - proyvind: perl: add icon() & icon_url() to RPM::Spec.
    - bero: Python 2.6 support in configure.ac

5.1.0 -> 5.2a1:
    - jbj: update osgideps.pl (#466111).
    - jbj: create absolute file paths index in rpmdb.
    - jbj: fix: he->tag was returning RPMTAG_BASENAMES, not RPMTAG_FILEPATHS.
    - proyvind: install rpmbuild.h & rpmspec.h on system again (needed by urpmi).
    - jbj: avoid mtab info leakage problems (#457940).
    - proyvind: perl: add back installsrpm() function from old RPM4 bindings.
    - proyvind: python: in case of RPMRC_NOTFOUND, return Py_None without
      rpmlog printing error.
    - proyvind: rpm4compat: add a fdSize() wrapper which uses Fstat().
    - proyvind: rpm4compat: add urltype & prototype for urlPath() since it's
      used by rpmfiBuildFNames. (Why does only C++ complaint about this???)
    - proyvind: rpm4compat: add rpm_machtable_e since it's been moved out of
      the api.
    - proyvind: rpm4compat: explicitly cast to HE_t (C++ compatibility).
    - proyvind: rpm4compat: define all _RPM*_INTERNALs before inclusion of any
      rpm headers at all to ensure that these actually has any effect.
    - jbj: print last problem added w platform affinity failure.
    - jbj: lazily create ts problem set.
    - jbj: selinux: resurrect lsetfilecon using libselinux API.
    - jbj: use macro, not /bin/bash, in scriptlet_requires.
    - jbj: don't run empty transactions, avoiding obscure error msg.