@@ -127,7 +127,9 @@ typedef enum rpmQVSources_e {
     RPMQV_FTSWALK,	/*!< ... from fts(3) walk. */
     RPMQV_WHATNEEDS,	/*!< ... from requires using contained provides. */
     RPMQV_SPECSRPM,	/*!< ... srpm from spec file parse (query only). */
-    RPMQV_SOURCEPKGID	/*!< ... from source package id (header+payload MD5). */
+    RPMQV_SOURCEPKGID,	/*!< ... from source package id (header+payload MD5). */
+    RPMQV_WHATCONFLICTS,/*!< ... from conflicts db search. */
+    RPMQV_WHATOBSOLETES	/*!< ... from obsoletes db search. */
 } rpmQVSources;
 
 /** \ingroup rpmcli
